test/cases/positive/object-shorthand.js
export default {
  sayHello() {
    return this.ref(1)
  },
  foobar,
  computed,
  ref,
}

const a = {
  toRefs
}
