test/cases/negative/non-target2.js
const a = {
  ref: 1
}

